# Aeris

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py  test_agent_cli.py
aeris/: __init__.py  config.py  database.py  main.py
aeris/models/: __init__.py  chunk.py  conversation.py  document.py  file_record.py  knowledge_base.py  message.py  scheduled_task.py  trace.py  user.py
aeris/routers/: auth.py  chat.py  files.py  health.py  monitoring.py  rag.py  skill_usage.py  ws.py
aeris/schemas/: __init__.py  chat.py  rag.py  task.py
aeris/services/: agent_engine.py  auth_service.py  chat_service.py  document_processor.py  file_service.py  knowledge_base_service.py  monitoring_service.py  provider_manager.py  task_scheduler.py  tokenizer.py
aeris/skills/: registry.py
aeris/utils/: file_utils.py  security.py  timing_collector.py
alembic/: env.py
alembic/versions/: 247b425cbc41_add_chunks_table.py  2a85696eaf83_add_knowledge_base_and_document_tables.py  2d2d4cd08306_add_knowledge_base_ids_to_conversation.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  global.css  main.tsx
meditatio/: database.py  main.py
meditatio/models/: __init__.py  base.py  chunk.py  conversation.py  document.py  file_record.py  knowledge_base.py  message.py  scheduled_task.py  skill_usage.py  user.py
meditatio/routers/: auth.py  chat.py  files.py  health.py  monitoring.py  rag.py  skill_usage.py  tasks.py  timing_admin.py  ws.py
meditatio/schemas/: __init__.py  chat.py  (+2 more)
scripts/: demo_analysis_scenarios.md  generate_demo_data.py
test_files/: 398专线IP.xlsx
tests/: conftest.py  test_agent_cli.py  test_agent_engine.py  test_agent_engine_streaming.py  test_auth.py  test_data_analysis_skill.py  test_embedding_service.py  test_excel_agent.py  test_file_service.py  test_kb_service.py  test_provider.py  test_provider_streaming.py  test_task_service.py  test_websocket_chat.py
(+80 files in other folders)
