[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aeris"
version = "0.1.0"
description = "A lightweight AI Agent platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Aeris Team"}
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.14",
    "psycopg[binary]>=3.1.18",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "openai>=1.12.0",
    "httpx>=0.26.0",
    "aiofiles>=23.2.0",
    "Pillow>=10.2.0",
    "python-magic>=0.4.27",
    "apscheduler>=3.10.4",
    "croniter>=6.2.2",
    "tiktoken>=0.6.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "tabulate>=0.9.0",
    "PyPDF2>=3.0.0",

]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["aeris"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
